--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_clear"
+    android:background="@drawable/bgclear"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
-        android:layout_marginLeft="55dp">
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="145dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
