--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -52,6 +52,7 @@
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/cooperhewitt_bold"
                 android:text="Total: 0,0"
+                android:textColor="#002b64"
                 android:textSize="24sp"
                 tools:layout_marginBottom="10dp" />
 
