--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -33,6 +33,7 @@
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/cooperhewitt_bold"
                 android:text="Cart"
+                android:textColor="#002b64 "
                 android:textSize="14sp" />
 
             <TextView
