--- a/app/src/main/res/layout/activity_sign_in_delivery.xml
+++ b/app/src/main/res/layout/activity_sign_in_delivery.xml
@@ -118,12 +118,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        >
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="3dp"
+        android:orientation="vertical">
 
         <android.widget.Button
 
