--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,37 +11,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="55dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="145dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
             android:fontFamily="@font/cooperhewitt_bold"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:text="@string/Logo_name"
             android:textAlignment="center"
             android:textColor="#fccbbf"
             android:textSize="60sp"
-            android:textStyle="normal">
+            android:textStyle="normal"
+            >
 
         </TextView>
 
         <TextView
             android:id="@+id/txtSlogan"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="65dp"
             android:fontFamily="@font/pacifico"
             android:gravity="center"
-            android:text="something human"
+            android:text="Something Home-Made"
             android:textAlignment="center"
             android:textColor="#c75c41"
             android:textSize="25sp">
 
-            >
         </TextView>
 
     </LinearLayout>
