--- a/app/src/main/res/layout/layout_order_item.xml
+++ b/app/src/main/res/layout/layout_order_item.xml
@@ -45,21 +45,21 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="@android:color/holo_green_dark"
                 android:textStyle="italic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
 
             <TextView
-                android:id="@+id/txt_order_comment"
-                android:text="Order comment"
+                android:id="@+id/txt_order_price"
+                android:text="Price: "
                 android:fontFamily="@font/cooperhewitt_bold"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="@android:color/holo_green_dark"
                 android:textStyle="italic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,7 +73,21 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="@android:color/holo_green_dark"
+                android:textStyle="italic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                android:id="@+id/txt_order_items"
+                android:text="Order Items: "
+                android:fontFamily="@font/cooperhewitt_bold"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:textSize="12sp"
+                android:textColor="@android:color/holo_green_dark"
                 android:textStyle="italic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
