--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -109,18 +109,17 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                        
+
                         <ImageView
-                            android:layout_weight="1"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/ic_attach_money_black_24dp"
-                            />
+                            android:layout_height="20sp"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/ic_rupee_indian" />
 
                         <TextView
                             android:id="@+id/food_price_up"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="18sp"
                             android:layout_weight="9"
                             android:fontFamily="@font/cooperhewitt_bold"
                             android:text="1,000"
@@ -166,22 +165,22 @@
                     android:orientation="horizontal"
                     android:layout_weight="10">
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_attach_money_black_24dp" />
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="20sp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_rupee_indian" />
 
-                <TextView
-                    android:id="@+id/food_price"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="9"
-                    android:fontFamily="@font/cooperhewitt_bold"
-                    android:text="1,000"
-                    android:textColor="#002b64"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/food_price"
+                        android:layout_width="0dp"
+                        android:layout_height="18sp"
+                        android:layout_weight="9"
+                        android:fontFamily="@font/cooperhewitt_bold"
+                        android:text="1,000"
+                        android:textColor="#002b64"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
