--- a/app/src/main/res/layout/layout_food_item.xml
+++ b/app/src/main/res/layout/layout_food_item.xml
@@ -52,10 +52,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/cooperhewitt_bold"
-                    android:text="$0"
+                    android:text="\u20B90"
                     android:textColor="@android:color/white"
-                    android:textSize="20sp"
-                    />
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
