--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -124,6 +124,7 @@
                             android:layout_weight="9"
                             android:fontFamily="@font/cooperhewitt_bold"
                             android:text="1,000"
+                            android:padding="4dp"
                             android:textColor="#002b64"
                             android:textSize="18sp"
                             android:textStyle="bold" />
@@ -159,6 +160,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/cooperhewitt_bold"
+                    android:padding="12dp"
+                    android:text="Price"
+                    android:textColor="#002b64"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
                 <LinearLayout
 
                     android:layout_width="match_parent"
@@ -187,8 +199,8 @@
 
                 <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                     android:id="@+id/number_button"
-                    android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_width="142dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="18dp"
