--- a/app/src/main/res/layout/layout_order_item_d.xml
+++ b/app/src/main/res/layout/layout_order_item_d.xml
@@ -33,10 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_order_number_d"
-                android:text="26/11/2019 13:05:06"
-                android:textColor="@android:color/holo_blue_light"
-                android:fontFamily="@font/cooperhewitt_bold"
-                android:textStyle="italic"
+                android:text="1587554564684"
+                android:textColor="#002b64"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 />
 
@@ -44,9 +43,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_time_d"
-                android:text="Order Date: avbfbiuebifbwe"
-                android:fontFamily="@font/cooperhewitt_bold"
-                android:textStyle="italic"
+                android:text="Order Date: 00/00/00"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 />
 
@@ -56,8 +54,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_name_d"
                 android:text="Name: David"
-                android:fontFamily="@font/cooperhewitt_bold"
-                android:textStyle="italic"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 />
 
@@ -66,9 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_order_status_d"
-                android:text="Order Staus: Place"
-                android:fontFamily="@font/cooperhewitt_bold"
-                android:textStyle="italic"
+                android:text="Order Status: Place"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 />
 
@@ -77,8 +73,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_num_item_d"
                 android:text="Num of Items: 10"
-                android:fontFamily="@font/cooperhewitt_bold"
-                android:textStyle="italic"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 />
 
