--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -135,13 +135,13 @@
                         android:id="@+id/food_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/cooperhewitt_bold"
-                        android:lineSpacingMultiplier="1.5"
+                        android:fontFamily="@font/cooperhewitt_medium"
+                        android:layout_marginTop="4dp"
+                        android:lineSpacingMultiplier="1.25"
                         android:padding="12dp"
                         android:text="Description"
                         android:textColor="@android:color/black"
-                        android:textSize="14sp" />
+                        android:textSize="18sp" />
 
 
 
@@ -182,15 +182,16 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:layout_margin="4dp"
+                        android:layout_margin="5dp"
                         app:srcCompat="@drawable/ic_rupee_indian" />
 
                     <TextView
                         android:id="@+id/food_price"
                         android:layout_width="0dp"
-                        android:layout_height="18sp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="9"
                         android:fontFamily="@font/cooperhewitt_bold"
+                        android:padding="4dp"
                         android:text="1,000"
                         android:textColor="#002b64"
                         android:textSize="18sp"
