--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:background="@android:color/white"
         android:weightSum="5"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="vertical"
@@ -65,6 +65,57 @@
                 app:scrollInterval="5000"
                 app:viewpagerAspectRatio="1.33"
                 />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="18dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="9dp"
+                android:fontFamily="@font/cooperhewitt_bold"
+                android:text="FasterChef Summer'20 Discount!"
+                android:textColor="#002b64 "
+                android:textSize="24sp"
+                android:textStyle="bold">
+
+            </TextView>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_trending_down_black_24dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="8dp"
+                    android:lineSpacingMultiplier="1.25"
+                    android:fontFamily="@font/cooperhewitt_medium"
+                    android:textSize="18sp"
+                    android:text = "5% off\t\t  - After 5 orders\n10% off\t\t- After 10 orders\nApplicable on all FasterChef items!">
+
+                </TextView>
+            </LinearLayout>
+
+
 
         </LinearLayout>
         
