--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -41,9 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
-                android:fontFamily="@font/cooperhewitt_bold"
+                android:fontFamily="@font/cooperhewitt_medium"
                 android:text="100.0"
                 android:textColor="@android:color/holo_red_dark"
                 android:textSize="14sp"
@@ -59,9 +59,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="@font/cooperhewitt_bold"
+                    android:fontFamily="@font/cooperhewitt_medium"
                     android:text="100.0"
                     android:textColor="#0dbb00"
                     android:textSize="14sp"
