--- a/app/src/main/res/layout/layout_order_item.xml
+++ b/app/src/main/res/layout/layout_order_item.xml
@@ -26,6 +26,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:textColor="#002b64"
                 android:id="@+id/txt_order_date"
                 android:text="Today at 13:05 pm"
                 android:fontFamily="@font/cooperhewitt_bold"
@@ -40,13 +41,13 @@
             <TextView
                 android:id="@+id/txt_order_number"
                 android:text="Order number:"
-                android:fontFamily="@font/cooperhewitt_bold"
+                android:fontFamily="@font/cooperhewitt_medium"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_green_dark"
-                android:textStyle="italic"
+                android:textColor="#000000"
+                android:textStyle="normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -54,13 +55,13 @@
             <TextView
                 android:id="@+id/txt_order_price"
                 android:text="Price: "
-                android:fontFamily="@font/cooperhewitt_bold"
+                android:fontFamily="@font/cooperhewitt_medium"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_green_dark"
-                android:textStyle="italic"
+                android:textColor="#000000"
+                android:textStyle="normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -68,13 +69,13 @@
             <TextView
                 android:id="@+id/txt_order_status"
                 android:text="Status: Placed"
-                android:fontFamily="@font/cooperhewitt_bold"
+                android:fontFamily="@font/cooperhewitt_medium"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_green_dark"
-                android:textStyle="italic"
+                android:textColor="#000000"
+                android:textStyle="normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
@@ -82,13 +83,13 @@
             <TextView
                 android:id="@+id/txt_order_items"
                 android:text="Order Items: "
-                android:fontFamily="@font/cooperhewitt_bold"
+                android:fontFamily="@font/cooperhewitt_medium"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
-                android:textColor="@android:color/holo_green_dark"
-                android:textStyle="italic"
+                android:textColor="#000000"
+                android:textStyle="normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
