--- a/app/src/main/res/layout/layout_order_item.xml
+++ b/app/src/main/res/layout/layout_order_item.xml
@@ -96,20 +96,20 @@
 
             <android.widget.Button
                 android:id="@+id/btnCallDelivery"
-                android:layout_width="120dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:background="@android:color/holo_green_dark"
-                android:fontFamily="@font/cooperhewitt"
+                android:layout_marginBottom="8dp"
+                android:background="#c75c41"
+                android:fontFamily="@font/cooperhewitt_medium"
                 android:text="Call Delivery"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
                 android:textAlignment="center"
-                android:gravity="center_horizontal">
+                android:gravity="center_vertical">
 
             </android.widget.Button>
 
