--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -32,6 +32,8 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="#c75c41"
+        app:tint = "#ffffff"
+        app:badgeBackgroundColor = "#002b64"
         android:elevation="0dp"
         app:borderWidth="0dp"
         app:srcCompat="@drawable/ic_shopping_cart_white_24dp" />
